tests/logs.txt
In file included from ../map_tests/operator >=.cpp:1:
In file included from ../map_tests/../system/system_methods.ipp:2:
In file included from ../map_tests/../system/lib.hpp:30:
../map_tests/../system/Alloc.hpp:55:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../map_tests/../system/Alloc.hpp:58:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../map_tests/../system/Alloc.hpp:164:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../map_tests/../system/Alloc.hpp:167:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:3:10: error: expected "FILENAME" or <FILENAME>
#include MAP
         ^
../map_tests/__service.ipp:19:14: error: use of undeclared identifier 'ft'
void fillMap(_map<T, V, C> &mp) {
             ^
../map_tests/../system/../../config.hpp:22:18: note: expanded from macro '_map'
#define _map                            ft::map
                                        ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:19:6: warning: variable templates are a C++14 extension [-Wc++14-extensions]
void fillMap(_map<T, V, C> &mp) {
     ^
../map_tests/__service.ipp:19:6: error: variable has incomplete type 'void'
../map_tests/__service.ipp:19:19: error: 'T' does not refer to a value
void fillMap(_map<T, V, C> &mp) {
                  ^
../map_tests/__service.ipp:18:17: note: declared here
template <class T, class V, class C>
                ^
../map_tests/__service.ipp:19:22: error: 'V' does not refer to a value
void fillMap(_map<T, V, C> &mp) {
                     ^
../map_tests/__service.ipp:18:26: note: declared here
template <class T, class V, class C>
                         ^
../map_tests/__service.ipp:19:25: error: 'C' does not refer to a value
void fillMap(_map<T, V, C> &mp) {
                        ^
../map_tests/__service.ipp:18:35: note: declared here
template <class T, class V, class C>
                                  ^
../map_tests/__service.ipp:19:29: error: use of undeclared identifier 'mp'
void fillMap(_map<T, V, C> &mp) {
                            ^
../map_tests/__service.ipp:19:32: error: expected ';' at end of declaration
void fillMap(_map<T, V, C> &mp) {
                               ^
                               ;
../map_tests/__service.ipp:19:33: error: expected unqualified-id
void fillMap(_map<T, V, C> &mp) {
                                ^
../map_tests/__service.ipp:35:2: error: use of undeclared identifier 'ft'
        _map<int, int> mp1, mp2, mp3, mp4;
        ^
../map_tests/../system/../../config.hpp:22:18: note: expanded from macro '_map'
#define _map                            ft::map
                                        ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:36:2: error: use of undeclared identifier 'ft'
        _map<string, string> mp5, mp6, mp7, mp8, mp9;
        ^
../map_tests/../system/../../config.hpp:22:18: note: expanded from macro '_map'
#define _map                            ft::map
                                        ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:39:47: error: use of undeclared identifier 'ft'
                m1.insert(std::make_pair(2, 3)); mp1.insert(ft::make_pair(2, 3));
                                                            ^
../map_tests/__service.ipp:40:47: error: use of undeclared identifier 'ft'
                m2.insert(std::make_pair(3, 3)); mp2.insert(ft::make_pair(3, 3));
                                                            ^
../map_tests/__service.ipp:41:47: error: use of undeclared identifier 'ft'
                m3.insert(std::make_pair(3, 4)); mp3.insert(ft::make_pair(3, 4));
                                                            ^
../map_tests/__service.ipp:42:47: error: use of undeclared identifier 'ft'
                m4.insert(std::make_pair(4, 4)); mp4.insert(ft::make_pair(4, 4));
                                                            ^
../map_tests/__service.ipp:43:47: error: use of undeclared identifier 'ft'
                m4.insert(std::make_pair(4, 5)); mp4.insert(ft::make_pair(4, 5));
                                                            ^
../map_tests/__service.ipp:44:55: error: use of undeclared identifier 'ft'
                m5.insert(std::make_pair("123", "123")); mp5.insert(ft::make_pair("123", "123"));
                                                                    ^
../map_tests/__service.ipp:45:55: error: use of undeclared identifier 'ft'
                m6.insert(std::make_pair("123", "124")); mp6.insert(ft::make_pair("123", "124"));
                                                                    ^
../map_tests/__service.ipp:46:55: error: use of undeclared identifier 'ft'
                m7.insert(std::make_pair("124", "123")); mp7.insert(ft::make_pair("124", "123"));
                                                                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
5 warnings and 20 errors generated.
0 errors generated.
enerated.
